--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "web-astro-piotr-ddd",
+	"name": "template-astro-v5",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
@@ -12,26 +12,29 @@
 		"check": "astro check"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.9.5",
 		"@astrojs/react": "^4.4.2",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
-		"astro": "^5.15.7",
+		"astro": "^5.15.8",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"tailwindcss": "^4.1.17"
+		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^8.46.4",
 		"@typescript-eslint/parser": "^8.46.4",
+		"autoprefixer": "^10.4.22",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-astro": "^1.5.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-prettier": "^5.5.4",
+		"postcss": "^8.5.6",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.7.1",
+		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.4"
 	}
